# student-learning-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
data/: performance_history.json  student_profile.json  study_materials.json  upcoming_tests.json
evals/: assignment_queries.md  capture_assignment_responses.py  golden.jsonl  run_evals.py
src/assistant/: __init__.py  agent.py  cli.py  data.py  modeling.py  retrieval.py  schema.py  seed.py  server.py  store.py  tools.py  tracing.py
src/assistant/static/: app.js  index.html  styles.css
tests/: test_agent_loop.py  test_tools.py
